Update About.tsx to include image paths

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-typescript-starter",
-  "homepage": "https://lyudommuny13.github.io/portfolio.git/",
+  "homepage": "https://lyudommuny13.github.io/portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
