--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.19",
+    "@mui/material": "^6.3.1",
+    "ai": "^2.2.0",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.0.8",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
+    "openai": "^4.77.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "styled-components": "^6.1.13",
-    "swiper": "^11.2.0"
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.14",
+    "swiper": "^11.2.0",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
