--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.19",
     "@mui/material": "^6.3.1",
+    "@types/next": "^8.0.7",
     "ai": "^2.2.0",
+    "embla-carousel-react": "^8.5.2",
     "firebase": "^11.1.0",
     "framer-motion": "^11.0.8",
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.344.0",
+    "next": "^15.2.0",
     "openai": "^4.77.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
